# chat_app

./: .gitignore  README.md
api/: .env  Cargo.toml  docker-compose.yml
api/migrations/: 20250302225814_initial-migration.down.sql  20250302225814_initial-migration.up.sql
api/src/: lib.rs  main.rs
api/src/auth_service/: error.rs  mod.rs  router.rs
api/src/auth_service/claims/: error.rs  mod.rs
api/src/auth_service/user/: error.rs  mod.rs
api/src/conversation_service/: conversation.rs  error.rs  message.rs  mod.rs  router.rs  routes.rs
api/src/conversation_service/message/: error.rs  mod.rs
api/src/db_service/: auth.rs  mod.rs
api/src/server/: mod.rs
api/src/web_services/: mod.rs
api/tests/: auth_service.rs  conversation_service.rs
client/: package-lock.json  package.json  svelte.config.js
client/src/: app.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src/routes/: +layout.ts  +page.svelte
client/src/routes/contacts/: +page.svelte
client/src/routes/home/: +layout.svelte  +page.svelte
client/src/routes/messaging/: +layout.svelte  +page.svelte
client/src/routes/signup/: +page.server.js  +page.server.ts  +page.svelte
