[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.1"
chrono = "0.4.40"
derive_more = { version = "2.0.1", features = ["full"] }
email_address = "0.2.9"
jsonwebtoken = "9.3.1"
jwt = "0.16.0"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["chrono", "derive", "macros", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.13.1", features = ["v4"] }

[dev-dependencies]
faker_rand = "0.1.1"
rand = "0.9.0"
